# FMAN40

./: .gitignore  CMakeLists.txt  README.md  TODO.md
Matlab_script/: expertToText.m  exportPolygon.m  main.m  planeMarker.m
Matlab_script/triangulation/: dlvertex.m  genfigs.m  triangulate.m  tripoly.m
Matlab_script/warping/: pextend.m  pflat.m  polyarea.m  projplane.m  warp.m
datasets/1/polygons/: poly1.txt
datasets/1/sparse/: cameras.txt  points3D.txt
datasets/2/polygons/: poly1.txt
datasets/2/sparse/: cameras.txt  points3D.txt
datasets/3/polygons/: poly1.txt
datasets/3/sparse/: cameras.txt  points3D.txt
datasets/4/polygons/: poly1.txt
datasets/4/sparse/: cameras.txt  images.txt  points3D.txt
scripts/: colmap.sh
src/: CMakeLists.txt  camera.h  colmap.cpp  colmap.h  geometry.h  image.cpp  image.h  main.cpp  mesh.cpp  mesh.h  point3d.h  polygon.h  reconstruction.cpp  reconstruction.h  str_util.cpp  str_util.h  util.cpp  util.h
